--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/bought.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/bought.ejs
@@ -15,6 +15,10 @@
     <div>
         <%- include('../partials/header.ejs') %>
     </div>
+
+    <div>
+        <h1>All Done!</h1>
+    </div>
 </div>
 </body>
 </html>
