--- a/Rotten-Mangoes-rifah2/movie-website-master/templates/views/cart.ejs
+++ b/Rotten-Mangoes-rifah2/movie-website-master/templates/views/cart.ejs
@@ -32,11 +32,14 @@
                             <!-- Set columns width -->
                             <th class="text-center py-3 px-4" style="min-width: 400px;">Product Name &amp; Details</th>
                             <th class="text-right py-3 px-4" style="width: 100px;">Price</th>
-                            <!--<th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#" class="shop-tooltip float-none text-light" title="" data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th>-->
+                            <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#" class="shop-tooltip float-none text-light" title="" data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th>
                         </tr>
                         </thead>
                         <tbody>
 
+                        <%var y = []%>
+                        <%for(var i = 0; i < merch.length; i++){%>
+                            <% y[i] = 1}%>
                         <% for(var i = 0; i < merch.length; i++){ %>
                             <tr>
                                 <td class="p-4">
@@ -48,17 +51,17 @@
                                     </div>
                                 </td>
                                 <td class="text-right font-weight-semibold align-middle p-4"><%= merch[i].Price + "/-" %></td>
-                                <!--<%var y = 1%>
-                                <%if(y === 0){%>
-                                <td><button id="btnSaveChanges" class="btn btn-success disabled" style="color: red; align-self: center; position: relative; top: 15px; width: 45px; height: 38px;">Cancel</button></td>
+
+                                <%if(y[i] === 0){%>
+                                <td><button id="btnSaveChanges" class="btn btn-success disabled" style="color: white; font-size: x-small; align-self: center; position: relative; top: 15px; width: 45px; height: 38px;">Done</button></td>
                                 <%}else {%>
                                 <form action="/cart" method="post">
                                     <input type="hidden" name = "product_id" id = "product_id" value=<%=merch[i].Product_id%>>
                                     <input type="hidden" name = "price" id = "price" value=<%=merch[i].Price%>>
-                                    <%y = 0%>
-                                    <td><button id="btnSaveChanges" class="btn btn-success" style="color: red; align-self: center; position: relative; top: 15px; width: 45px; height: 38px;">Cancel</button></td>
+                                    <td><button id="btnSaveChanges" class="btn btn-success" style="color: white; font-size: x-small; align-self: center; position: relative; top: 15px; width: 45px; height: 38px;">Buy</button></td>
+                                    <%y[i] = 0%>
                                 </form>
-                                <%}%>-->
+                                <%}%>
                                 <% total = total + merch[i].Price%>
                             </tr>
                         <%}%>
@@ -78,10 +81,6 @@
 
                 <div class="float-right">
                     <form action="/bought" method="post">
-                        <% for(var i = 0; i < merch.length; i++){ %>
-                        <input type="hidden" name = "product_id" id = "product_id" value=<%=merch[i].Product_id%>>
-                        <input type="hidden" name = "price" id = "price" value=<%=merch[i].Price%>>
-                        <%}%>
                         <button type="button" class="btn btn-lg btn-primary mt-2">Checkout</button>
                     </form>
                 </div>
